--- a/trunk/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
+++ b/trunk/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="R2V2Analyzer.cs" />
     <Compile Include="TokRenamer.cs" />
+    <Compile Include="XboxModelReader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
