support for showing texture on viewer (based on ps2 textures)

--- a/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
+++ b/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
@@ -41,6 +41,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\OpenTK\1.1\Binaries\OpenTK\Release\OpenTK.dll</HintPath>
     </Reference>
+    <Reference Include="OpenTK.Compatibility, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL" />
     <Reference Include="OpenTK.GLControl, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\OpenTK\1.1\Binaries\OpenTK\Release\OpenTK.GLControl.dll</HintPath>
@@ -61,6 +62,7 @@
     <Compile Include="FindSmallest.cs" />
     <Compile Include="GCModelReader.cs" />
     <Compile Include="GridFileReader.cs" />
+    <Compile Include="ImageExtractor.cs" />
     <Compile Include="ImmediateCube.cs" />
     <Compile Include="NormalisedByteTester.cs" />
     <Compile Include="PointViewer.cs" />
