--- a/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
+++ b/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ModelNamer.PointViewer</StartupObject>
+    <StartupObject>ModelNamer.PS2ToGCModelNamer</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
@@ -68,6 +68,7 @@
     <Compile Include="PointViewer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PS2ToGCModelNamer.cs" />
     <Compile Include="R2V2Analyzer.cs" />
     <Compile Include="TokRenamer.cs" />
     <Compile Include="XboxModelReader.cs" />
