--- a/trunk/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
+++ b/trunk/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ModelNamer.ImageExtractor</StartupObject>
+    <StartupObject>ModelNamer.PointViewer</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
