--- a/trunk/Gladius/Unpacking/ModelNamer/XNAViewer/XNAViewer.csproj
+++ b/trunk/Gladius/Unpacking/ModelNamer/XNAViewer/XNAViewer.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Reference Include="MonoGame.Framework, Version=3.1.2.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
