--- a/trunk/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
+++ b/trunk/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
@@ -36,9 +36,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ModelNamer.PointViewer</StartupObject>
+    <StartupObject>ModelNamer.PAK1Splitter</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>..\..\..\..\..\tmp\SharpZipLib_0860_Bin\net-20\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="MonoGame.Framework, Version=3.1.2.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="SharpDX, Version=2.5.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System" />
