--- a/Gladius/Unpacking/ModelNamer/XNAViewer/XNAViewer.csproj
+++ b/Gladius/Unpacking/ModelNamer/XNAViewer/XNAViewer.csproj
@@ -67,6 +67,10 @@
       <Project>{D6610849-5D22-4CA1-A429-0D189D2464DA}</Project>
       <Name>ModelNamer</Name>
     </ProjectReference>
+    <ProjectReference Include="..\XNAPointViewerContent\XNAPointViewerContent\XNAPointViewerContent.csproj">
+      <Project>{BE9D17B0-7EC8-45F3-BE9F-A0ABA582D902}</Project>
+      <Name>XNAPointViewerContent</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
