fixed 'some' issues with alpha textures

--- a/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
+++ b/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
@@ -36,7 +36,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ModelNamer.GCModelReader</StartupObject>
+    <StartupObject>ModelNamer.ImageExtractor</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ICSharpCode.SharpZipLib">
