--- a/trunk/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
+++ b/trunk/Gladius/Unpacking/ModelNamer/ModelNamer/ModelNamer.csproj
@@ -88,6 +88,17 @@
     <Compile Include="XboxImageExtractor.cs" />
     <Compile Include="XboxModelReader.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="FBXADefinitions.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FBXADocumentDescription.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FBXAHeader.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
