--- a/Gladius/Unpacking/GCTextureTools/GCTextureTools/GCTextureTools - Backup.csproj
+++ b/Gladius/Unpacking/GCTextureTools/GCTextureTools/GCTextureTools - Backup.csproj
@@ -8,11 +8,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>GCTextureTools</RootNamespace>
     <AssemblyName>GCTextureTools</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,16 +32,11 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>GCTextureTools.ImageExtractor</StartupObject>
-  </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BlockEncoder.cs" />
-    <Compile Include="ByteHelper.cs" />
-    <Compile Include="ColorVariationGenerator.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="TextureTools.cs" />
   </ItemGroup>
